src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --primary: #1f3e72;
  --secondary: rgba(255, 255, 255, 0.78);
  --black: #131110;
  --blue-gradient: linear-gradient(97.05deg, #4066ff 3.76%, #2949c6 100%);
  --orange-gradient: linear-gradient(270deg, #ffb978 0%, #ff922d 100%);
  --blue: #4066ff;
  --lightBlue: #eeeeff;
  --shadow: 0px 23px 21px -8px rgba(136, 160, 255, 0.25);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  scroll-behavior: smooth;
}
a {
  color: inherit;
  text-decoration: none;
}
.paddings {
  @apply p-[24px];
}

.innerWidth {
  @apply w-[100%];
}

.flexCenter {
  @apply flex justify-center items-center flex-wrap;
  row-gap: 2rem;
}
.flexStart {
  @apply flex justify-start items-center;
}

.flexEnd {
  @apply flex justify-end items-center;
}

.flexColCenter {
  @apply flex justify-center items-center flex-col;
}
.flexColStart {
  @apply flex flex-col justify-center items-start;
}
.flexColEnd {
  @apply flex flex-col justify-center items-end;
}

.primaryText {
  @apply text-[#1f3e72] text-[32px] font-bold;
}

.secondaryText {
  @apply text-[15px];
  color: rgb(140 139 139);
}
.orangeText {
  @apply text-orange-500 text-[24px] font-semibold;
}

.center {
  @apply items-center !important;
}

/* Header Css */
.h-container {
  @apply justify-between pt-[1rem] pb-[1rem] text-[var(--secondary)];
}

.h-menu {
  @apply gap-[2rem];
}

.h-menu > *:hover {
  @apply cursor-pointer;
}

.button {
  @apply font-medium py-[0.5rem] px-[1.4rem] text-white border-none rounded-md;
  background: var(--blue-gradient);
  transition: all 300ms ease-in;
}
.button:hover {
  @apply cursor-pointer scale-110;
}

/* Hero Container */

.hero-container {
  @apply justify-between items-end;
}

/* left side */
.hero-left {
  @apply gap-[3rem];
}

.hero-title {
  @apply relative z-10;
}

.orange-circle {
  @apply h-[64px] w-[64px] absolute rounded-full right-[28%] top-[-10px] z-[-1];
  background: var(--orange-gradient);
}

.hero-title > h1 {
  @apply font-semibold text-[3.8rem] leading-[4rem];
}

.search-bar {
  @apply flex justify-center items-center px-[14px] py-[10px]  md:px-[20px] md:py-[10px] bg-white rounded-md border-2 w-[100%];
  border: 3px solid rgba(120, 120, 120, 0.374);
}

.search-bar > input {
  @apply border-none outline-none text-black text-[18px] font-medium;
}

/* Stats */

.stat > :nth-child(1) {
  @apply text-[32px];
}

.stat > :nth-child(1) > :last-child {
  color: orange;
}
/* hero container right side */
.image-container {
  @apply w-[22rem] h-[25rem] md:w-[32rem] md:h-[35rem];
  border-radius: 15rem 15rem 0 0;
  border: 8px solid rgba(255, 255, 255, 0.12);
}

.image-container > img {
  @apply w-full h-full;
  border-radius: 15rem 15rem 0 0;
}

/* Companies */

.c-container {
  @apply justify-around gap-[16px] py-[20px];
}

.c-container > img {
  @apply w-[144px];
}

/* Swiper Slider */

.r-container {
  @apply relative;
}

.r-head {
  @apply mb-[32px];
}

.r-card {
  @apply gap-[10px] p-[16px] rounded-lg max-w-max m-auto;
  transition: all 300ms ease-in-out;
}

.r-card > img {
  @apply w-full max-w-[240px];
}

.r-card > :nth-child(2) {
  @apply text-[20px] font-semibold flex gap-[4px];
}

.r-card > :nth-child(3) {
  @apply text-[24px];
}

.r-card > :nth-child(4) {
  @apply text-[12px] w-[240px];
}

/* Hover r-card */
.r-card:hover {
  @apply scale-[1.025] cursor-pointer rounded-lg;
  background: linear-gradient(
    180deg,
    rgba(225, 255, 255, 0) 0%,
    rgba(136, 160, 255, 0.46) 217.91%
  );
  box-shadow: 0 72px 49px -51px #88a0ff36;
}

.swiper-horizontal {
  overflow: visible;
}

.r-buttons {
  @apply absolute gap-[10px] top-[-4rem] right-[30px];
}

.r-buttons > button {
  @apply text-[20px] py-[0.2rem] px-[0.8rem] text-[blue] border-none rounded-lg bg-white cursor-pointer;
  box-shadow: 0 0 5px 1px #00000040;
}

.r-buttons > :nth-child(1) {
  @apply bg-[#eeeeff];
}

.r-buttons > :nth-child(2) {
  box-shadow: 0 0 5px 1px #00000040;
}

/* Value Section */
.v-container .image-container {
  border: 8px solid rgb(232 232 232 / 93%);
}

.v-container > div {
  @apply flex-1;
}

.v-right {
  @apply gap-[8px];
}

.accordion {
  @apply border-none !important;
}

.accordionItem {
  @apply bg-white rounded-lg overflow-hidden mb-[20px] border;
}

.accordionItem.expanded {
  @apply rounded-md;
  box-shadow: var(--shadow);
}

.accordionButton {
  @apply bg-white p-[16px] w-full justify-between;
}

.icon {
  @apply p-[10px] bg-[#eeeeff] rounded-md;
}

.icon svg {
  fill: var(--blue);
}

.accordionButton .primaryText {
  @apply text-[18px];
}

/* Contact */
.c-container {
  @apply justify-between;
}

.c-container > div {
  @apply flex-1;
}

.c-riht {
  @apply w-full;
}

.c-left {
  @apply gap-[8px];
}

.contactModes {
  @apply mt-[32px] gap-[16px];
}

.contactModes .row {
  @apply gap-[24px];
}

.mode {
  @apply w-[256px] p-[16px] rounded-md gap-[16px];
  border: 0.8px solid rgba(128, 128, 128, 0.143);
  transition: all 300ms ease-in;
}

.mode .button {
  @apply w-[100%] text-[blue] text-[14px] font-semibold;
  background: var(--lightBlue);
}

.mode > :nth-child(1) {
  @apply w-[100%] gap-[25px];
}

.mode .detail .primaryText {
  @apply text-[1.1rem] font-semibold;
}

.mode:hover {
  @apply scale-[1.1];
  box-shadow: var(--shadow);
}

.mode .button:hover {
  @apply text-white scale-[0.8];
  background: var(--blue-gradient);
}

/* Get Started */

.inner-container {
  @apply gap-[24px] p-[32px] rounded-xl text-center;
  background: #4161df;
  border: 6px solid #5d77d6;
}

.inner-container .primaryText {
  @apply text-white font-semibold;
}

.inner-container .secondaryText {
  color: rgba(255, 255, 255, 0.78);
}

.inner-container .button {
  background: #5a73d3;
  border: 2px solid white;
  box-shadow: var(--shadow);
  border-radius: 10px;
}

/* Footer */
.f-container {
  @apply justify-between;
}

.f-left {
  @apply gap-[16px];
}

.active {
  @apply flex !important;
}

.f-menu {
  @apply gap-[24px] mt-[24px] font-medium;
}

/* small Mobile */
@media (max-width: 768px) {
  .menu-icon {
    @apply relative block;
  }
  .h-menu {
    @apply absolute top-[48px] right-[64px] flex-col font-medium gap-[32px] p-[48px] rounded-xl items-start z-[1000] hidden;
    color: var(--black);
    background: white;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
    transition: all 300ms ease-in;
  }
}

/* media queries */
@media (min-width: 1536px) {
  .innerWidth {
    max-width: 1280px;
    margin: auto;
  }
}

@media (max-width: 640px) {
  /* Hero Section */
  .hero-container {
    @apply pt-[64px];
  }

  .hero-title > h1 {
    @apply text-[40px] leading-[48px];
  }
}

@media (min-width: 640px) {
  .paddings {
    @apply p-[64px];
  }
}

@media (min-width: 1280px), (min-width: 768px) {
  .paddings {
    @apply p-[32px];
  }
}

@media (max-width: 640px) {
  .primaryText {
    @apply text-[24px];
  }
  .orangeText {
    @apply text-[20px];
  }
}

